--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,6 +14,7 @@ $main-color : #275236;
 $sub-color : #679963;
 $font-color-main : #333;
 $font-color-sub : #666;
+$font-color-sub02 : #999;
 
 $border-color :  #DFDFDF;
 $bg-color01 : #F6F7FB;
