--- a/scss/component/_menu_item.scss
+++ b/scss/component/_menu_item.scss
@@ -25,9 +25,24 @@
     }
   }
 
+  &.sale {
+    .original-price {
+      text-decoration: line-through;
+      color: $font-color-sub;
+      font-size: 13px;
+      font-weight: 400;
+    }
+    .current-price {
+      color: #9E302C;
+    }
+    .descount-rate {
+      color: #9E302C;
+      font-size: 14px;
+      font-weight: 400;
+    }
+  }
   .prd-img-area {
     width: 100%;
-    height: 250px;
     border: 1px solid $border-color;
     overflow: hidden;
 
@@ -35,6 +50,7 @@
       width: inherit;
       height: inherit;
       object-fit: cover;
+      display: block;
     }
   }
 
@@ -56,14 +72,17 @@
 
   .prd-price-area {
     margin-bottom: 5px;
+    
     .current-price {
       font-size: 16px;
       font-weight: 500;
-      span {
+      em {
+        font-style: normal;
         font-size: 13px;
         font-weight: 400;
       }
     }
+
   }
 
   .prd-grade-area {
@@ -113,4 +132,6 @@
       background-color: $badge03;
     }
   }
+
+
 }
