--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -48,17 +48,73 @@
     .prd-list {
       width: calc(250px * 3 + 20px);
     }
+  }
 
+}
 
-    .slick-prev {
-      left: -40px;
+.new-area {
+  .title-group {
+    margin-bottom: 20px;
+  }
+}
+
+.deal-area {
+  .deal-title {
+    padding: 90px 0 320px;
+    background: url('/images/deal-bg.png') no-repeat center center / cover;
+    
+    .common-inner {
+      transform: translateY(60px);
     }
-    .slick-next {
-      right: -40px;
+    h1 {
+      font-size: 40px;
+      font-weight: 700;
+      text-transform: uppercase;
     }
+    p {
+      font-size: 17px;
+      font-weight: 500;
+      margin-bottom: 25px;
+    }
+  }
+  .deal-group {
+    margin-top: -220px;
+    .prd-list {
+      display: flex;
+      gap: 10px;
 
-
-
+      .prd-item {
+        margin: 0;
+      }
+    }
+  }
+  .prd-img-area {
+    position: relative;
+  }
+  .deal-countdown {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background-color: rgba(0,0,0,.4);
+    font-size: 18px;
+    font-weight: 700;
+    color: $white;
+    span {
+      font-size: 18px;
+      font-weight: 700;
+      color: $white;
+      &::before {
+        content: '\F293';
+        font-family: $bs-icon;
+        display: inline-block;
+        margin-right: 8px;
+        font-size: 25px;
+        vertical-align: top;
+      }
+    }
   }
 
 }
