--- a/css/style.css
+++ b/css/style.css
@@ -310,3 +310,223 @@ section:not(.visual-area) {
   font-size: 25px;
   vertical-align: top;
 }
+
+.exhibition-area .common-inner {
+  border: 1px solid #999;
+  height: 1060px;
+  overflow: hidden;
+}
+.exhibition-area .title-group {
+  display: flex;
+  height: 531px;
+}
+.exhibition-area .title-group .img {
+  width: 33.33%;
+  overflow: hidden;
+}
+.exhibition-area .title-group .img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.exhibition-area .title-group .title {
+  width: 16.66%;
+  background-color: #275236;
+  text-align: center;
+  font-size: 30px;
+  padding-top: 32px;
+  font-weight: 700;
+  color: #fff;
+}
+.exhibition-area .deco-img {
+  position: absolute;
+  right: 0;
+  top: 265px;
+  width: 33.33%;
+  height: 531px;
+}
+.exhibition-area .deco-img img {
+  width: 100%;
+  height: inherit;
+}
+.exhibition-area .exhibition-list .exhibition-item {
+  border: 1px solid #DFDFDF;
+  background-color: #fff;
+  position: absolute;
+  width: 33.333%;
+  height: 265px;
+}
+.exhibition-area .exhibition-list .exhibition-item:hover {
+  background-color: #DFDFDF;
+}
+.exhibition-area .exhibition-list .exhibition-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  position: relative;
+}
+.exhibition-area .exhibition-list .exhibition-item .exhibition-title {
+  font-size: 25px;
+  font-weight: 700;
+}
+.exhibition-area .exhibition-list .exhibition-item .exhibition-date {
+  margin-top: 20px;
+  font-size: 17px;
+  font-weight: 400;
+}
+.exhibition-area .exhibition-list .exhibition-item:nth-child(1) {
+  right: 0;
+  top: 0;
+}
+.exhibition-area .exhibition-list .exhibition-item:nth-child(2) {
+  width: calc(33.33% + 1px);
+  top: 265px;
+  right: calc(33.33% - 1px);
+}
+.exhibition-area .exhibition-list .exhibition-item:nth-child(3) {
+  top: 530px;
+  right: 49.98%;
+}
+.exhibition-area .exhibition-list .exhibition-item:nth-child(4) {
+  top: 795px;
+  right: 66.64%;
+}
+.exhibition-area .exhibition-list .exhibition-item:nth-child(5) {
+  top: 795px;
+  right: calc(16.6666666% - 1px);
+  width: calc(33.33% + 2px);
+}
+.exhibition-area .btn-all {
+  position: absolute;
+  width: 16.66%;
+  height: 265px;
+  text-align: center;
+  bottom: 0;
+  right: 0;
+  padding-top: 96px;
+}
+.exhibition-area .btn-all:hover {
+  background-color: #275236;
+  color: #fff;
+}
+.exhibition-area .btn-all::before {
+  content: "\f64d";
+  font-family: bootstrap-icons;
+  font-size: 35px;
+  display: block;
+}
+
+.book-area {
+  background-color: #f3f3f3;
+}
+.book-area .title {
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+}
+.book-area .tab-list {
+  display: flex;
+  justify-content: center;
+}
+.book-area .tab-list .tab-item {
+  flex: 1;
+  text-align: center;
+  cursor: pointer;
+  position: relative;
+  margin-top: 30px;
+  height: 55px;
+  line-height: 55px;
+  font-weight: 400;
+  overflow: hidden;
+}
+.book-area .tab-list .tab-item.is-active::before {
+  color: #275236;
+  font-weight: 600;
+}
+.book-area .tab-list .tab-item.is-active:hover::before {
+  top: 0%;
+}
+.book-area .tab-list .tab-item.is-active:hover::after {
+  top: 100%;
+}
+.book-area .tab-list .tab-item:hover::before {
+  top: -100%;
+}
+.book-area .tab-list .tab-item:hover::after {
+  top: 0;
+}
+.book-area .tab-list .tab-item::before, .book-area .tab-list .tab-item::after {
+  position: absolute;
+  content: attr(data-name);
+  font-size: 22px;
+  font-weight: 400;
+  width: 100%;
+  transition: 0.3s;
+}
+.book-area .tab-list .tab-item::before {
+  top: 0;
+  left: 0;
+  color: #999;
+}
+.book-area .tab-list .tab-item::after {
+  top: 100%;
+  left: 0;
+  color: #275236;
+}
+.book-area .tab-content {
+  margin-top: 50px;
+  justify-content: space-around;
+  display: none;
+}
+.book-area .tab-content.is-active {
+  display: flex;
+}
+.book-area .tab-content .prd-item {
+  margin: 0;
+  position: relative;
+  width: 280px;
+}
+.book-area .tab-content .prd-item:hover .book-info-area {
+  visibility: visible;
+  opacity: 1;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.book-area .tab-content .prd-img-area {
+  width: 280px;
+}
+.book-area .tab-content .prd-img-area img {
+  width: 100%;
+}
+.book-area .tab-content .book-info-area {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 50px;
+  border: 1px solid #DFDFDF;
+  transition: 0.3s;
+}
+.book-area .tab-content .book-info-area .prd-info-area {
+  margin-top: 0;
+}
+.book-area .total-btn {
+  margin: 50px auto 0;
+  display: block;
+  width: 170px;
+  padding: 8px 0;
+  border: 1px solid #275236;
+  border-radius: 5px;
+  font-size: 22px;
+  font-weight: 400;
+  color: #275236;
+  text-align: center;
+  transition: 0.3s;
+}
+.book-area .total-btn:hover {
+  background-color: #275236;
+  color: #fff;
+  border-color: transparent;
+}
