--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -118,3 +118,255 @@
   }
 
 }
+
+.exhibition-area {
+  .common-inner {
+    border: 1px solid #999;
+    height: 1060px;
+    overflow: hidden;
+  }
+  .title-group {
+    display: flex;
+    height: 531px;
+    .img {
+      width: 33.33%;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    .title {
+      width: 16.66%;
+      background-color: $main-color;
+      text-align: center;
+      font-size: 30px;
+      padding-top: 32px;
+      font-weight: 700;
+      color: $white;
+    }
+  }
+  .deco-img {
+    position: absolute;
+    right: 0;
+    top: 265px;
+    width: 33.33%; 
+    height: 531px;
+    img {
+      width: 100%;
+      height: inherit;
+    }
+  }
+  .exhibition-list {
+    .exhibition-item {
+      border: 1px solid $border-color;
+      background-color: $white;
+      position: absolute;
+      width: 33.333%;
+      height: 265px;
+      &:hover {
+        background-color: $border-color;
+      }
+
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        position: relative;
+
+      }
+      .exhibition-title {
+        font-size: 25px;
+        font-weight: 700;
+      }
+      .exhibition-date {
+        margin-top: 20px;
+        font-size: 17px;
+        font-weight: 400;
+      }
+
+      &:nth-child(1) {
+        right: 0;
+        top: 0;
+      }
+      &:nth-child(2) {
+        width: calc(33.33% + 1px);
+        top: 265px;
+        right: calc(33.33% - 1px);
+      }
+      &:nth-child(3) {
+        top: 530px;
+        right: 49.98%;
+      }
+      &:nth-child(4) {
+        top: 795px;
+        right: 66.64%;
+      }
+      &:nth-child(5) {
+        top: 795px;
+        right: calc(16.6666666% - 1px);
+        width: calc(33.33% + 2px);
+      }
+
+    }
+  }
+  .btn-all {
+    position: absolute;
+    width: 16.66%;
+    height: 265px;
+    text-align: center;
+    bottom: 0;
+    right: 0;
+    padding-top: 96px;
+
+    &:hover {
+      background-color: $main-color;
+      color: $white;
+    }
+
+    &::before {
+      content: '\F64D';
+      font-family: $bs-icon;
+      font-size: 35px;
+      display: block;
+    }
+  }
+}
+
+.book-area {
+  background-color: #f3f3f3;
+  
+  .title {
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+  }
+
+  .tab-list {
+    display: flex;
+    justify-content: center;
+
+
+    .tab-item {
+      &.is-active {
+        &::before {
+          color: $main-color;
+          font-weight: 600;
+        }
+        &:hover {
+          &::before {
+            top: 0%;
+          }
+          &::after {
+            top: 100%;
+          }
+        }
+      }
+
+      flex: 1;
+      text-align: center;
+      cursor: pointer;
+      position: relative;
+      margin-top: 30px;
+      height: 55px;
+      line-height: 55px;
+      font-weight: 400;
+      overflow: hidden;
+      &:hover {
+        &::before {
+          top: -100%;
+        }
+        &::after {
+          top: 0;
+        }
+      }
+      &::before,
+      &::after {
+        position: absolute;
+        content: attr(data-name);
+        font-size: 22px;
+        font-weight: 400;
+        width: 100%;
+        transition: 0.3s;
+      }
+      &::before {
+        top: 0;
+        left: 0;
+        color: #999;
+      }
+      &::after {
+        top: 100%;
+        left: 0;
+        color: $main-color;
+      }
+    }
+  }
+
+  .tab-content {
+    margin-top: 50px;
+    justify-content: space-around;
+    display: none;
+
+    &.is-active {
+      display: flex;
+    }
+
+    .prd-item {
+      margin: 0;
+      position: relative;
+      width: 280px;
+
+      &:hover {
+        .book-info-area {
+          visibility: visible;
+          opacity: 1;
+          background-color: rgba(255,255,255,.8);
+        }
+      }
+    }
+    .prd-img-area {
+      width: 280px;
+      img {
+        width: 100%;
+      }
+    }
+    .book-info-area {
+      visibility: hidden;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      padding: 50px;
+      border: 1px solid $border-color;
+      transition: .3s;
+      .prd-info-area {
+        margin-top: 0;
+      }
+
+
+    }
+  }
+
+  .total-btn {
+    margin: 50px auto 0;
+    display: block;
+    width: 170px;
+    padding: 8px 0;
+    border: 1px solid $main-color;
+    border-radius: 5px;
+    font-size: 22px;
+    font-weight: 400;
+    color: $main-color;
+    text-align: center;
+    transition: .3s;
+
+    &:hover {
+      background-color: $main-color;
+      color: $white;
+      border-color: $transparent;
+    }
+  }
+}
