--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -7,6 +7,8 @@
       .visual-img {
         img {
           width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
         .mhidden {
           display: none;
@@ -370,3 +372,70 @@
     }
   }
 }
+
+.channel-area {
+  background-color: $main-color;
+  .common-inner {
+    display: flex;
+    gap: 45px;
+    justify-content: space-around;
+
+    > div {
+      width: 50%;
+    }
+    
+    .nfm-group {
+
+      a {
+        background-color: #689C80;
+        padding: 75px 35px;
+        border : 1px solid $transparent;
+        transition: .3s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        &:hover {
+          background-color: $main-color;
+          border: 1px solid $border-color;
+        }
+      }
+      img {
+        width: 220px;
+      }
+    }
+
+    .sns-group {
+      border: 1px solid $border-color;
+      > div {
+        padding: 75px 35px;
+        text-align: center;
+      }
+      h1 {
+        font-size: 35px;
+        font-weight: 700;
+        color: $white;
+        margin-bottom: 35px;
+      }
+        a {
+          color: #999;
+          margin-right: 27px;
+          transition: .3s;
+          &:last-child {
+            margin-right: 0;
+          }
+          &:hover {
+            color: $white;
+          }
+        }
+        .bi{
+          &::before {
+            font-size: 45px;
+          }
+      }
+      
+    }
+  }
+}
+
+
