--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -4,12 +4,11 @@ html{
   scroll-behavior: smooth;
 }
 
-*,
-*::before,
-*::after {
+* {
     font-family:$font-default;
     font-size: 15px;
     font-weight: 300;
+    color: $font-color-main;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -29,7 +28,6 @@ a {
       text-decoration: none;
   }
 }
-
 
 // common
 section:not(.visual-area) {
@@ -103,4 +101,12 @@ section:not(.visual-area) {
 
 .slick-prev:before {
   transform: rotateY(180deg);
+}
+
+
+
+@mixin ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
