--- a/scss/component/_header.scss
+++ b/scss/component/_header.scss
@@ -8,7 +8,6 @@
   z-index: 9;
 
   &.is-active {
-    // position: fixed;
     background-color: $white;
     box-shadow: 0 0 5px rgba(0, 0, 0, .1);
 
@@ -32,6 +31,12 @@
       .gnb-list {
         a {
           color: $font-color-main;
+        }
+        .btn-trigger {
+            span {
+              color: $font-color-main;
+
+            }
         }
       }
       .gnb-btn {
@@ -88,10 +93,21 @@
       .btn-trigger {
         display: flex;
         align-items: center;
+        span {
+          color: $white;
+        }
+        &:hover {
+          span {
+            color: $main-color;
+          }
+        }
 
         &.is-active {
           color: $main-color;
           font-weight: 600;
+          span {
+            color: $main-color;
+          }
         }
       }
 
@@ -109,6 +125,7 @@
           font-weight: 500;
         }
       }
+
     }
 
     .gnb-btn {
@@ -237,6 +254,41 @@
         }
 
       }
+    }
+  }
+  .search-mobile {
+    display: none;
+    position: relative;
+
+    input[type=text] {
+      width: 100%;
+      background-color: $white;
+      padding: 7px 35px 7px 7px;
+      border-radius: 35px;
+      padding-left: 15px;
+      outline: none;
+      border: 1px solid $border-color;
+
+      &:focus::placeholder {
+        visibility: hidden;
+      }
+
+      &:focus {
+        border-color: rgba($main-color,.5);
+        box-shadow: 0 0 5px rgba($main-color, .5);
+      }
+
+    }
+
+
+    &::before {
+      content: '\F52A';
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      font-family: $bs-icon;
+      color: $font-color-sub;
     }
   }
 
