--- a/scss/component/_menu_item.scss
+++ b/scss/component/_menu_item.scss
@@ -1,6 +1,4 @@
-.prd-list {
-
-}
+.prd-list {}
 
 .prd-item {
   cursor: pointer;
@@ -9,6 +7,7 @@
   &.soldout {
     .prd-img-area {
       position: relative;
+
       &::before {
         content: 'SOLD OUT';
         position: absolute;
@@ -20,7 +19,7 @@
         font-weight: 700;
         font-size: 25px;
         color: $white;
-        background-color: rgba(0,0,0,.3);
+        background-color: rgba(0, 0, 0, .3);
       }
     }
   }
@@ -32,15 +31,18 @@
       font-size: 13px;
       font-weight: 400;
     }
+
     .current-price {
       color: #9E302C;
     }
+
     .descount-rate {
       color: #9E302C;
       font-size: 14px;
       font-weight: 400;
     }
   }
+
   .prd-img-area {
     width: 100%;
     border: 1px solid $border-color;
@@ -56,14 +58,17 @@
 
   .prd-info-area {
     margin: 15px 0 10px;
+
     .prd-category {
       color: $font-color-sub;
       font-size: 13px;
     }
+
     .prd-name {
       font-weight: 500;
       margin-top: 8px;
     }
+
     .prd-desc {
       font-size: 13px;
       font-weight: 400;
@@ -72,10 +77,11 @@
 
   .prd-price-area {
     margin-bottom: 5px;
-    
+
     .current-price {
       font-size: 16px;
       font-weight: 500;
+
       em {
         font-style: normal;
         font-size: 13px;
@@ -87,13 +93,16 @@
 
   .prd-grade-area {
     margin-bottom: 5px;
+
     span {
       font-size: 14px;
       font-weight: 400;
     }
+
     .bi-star-fill {
       color: $yellow;
     }
+
     .rating {
       margin-right: 10px;
       position: relative;
@@ -122,16 +131,99 @@
       font-weight: 600;
       color: $white;
     }
+
     .new-badge {
       background-color: $badge01;
     }
+
     .best-badge {
       background-color: $badge02;
     }
+
     .md-badge {
       background-color: $badge03;
     }
   }
 
 
+}
+
+@media (max-width: 767px) {
+  .prd-list {
+    width: 480px;
+  }
+
+  .prd-item {
+    margin: 0 5px;
+
+    &.soldout {
+      .prd-img-area {
+        &::before {
+          font-size: 18px;
+        }
+      }
+    }
+
+    &.sale {
+      .original-price {
+        text-decoration: line-through;
+        color: $font-color-sub;
+        font-size: 13px;
+        font-weight: 400;
+      }
+
+      .current-price {
+        color: #9E302C;
+      }
+
+      .descount-rate {
+        color: #9E302C;
+        font-size: 14px;
+        font-weight: 400;
+      }
+    }
+
+
+    .prd-info-area {
+      margin: 5px 0 8px;
+
+      .prd-category {
+        font-size: 11px;
+      }
+
+      .prd-name {
+        margin-top: 8px;
+        font-size: 13px;
+        @include ellipsis;
+      }
+
+      .prd-desc {
+        font-size: 12px;
+        @include ellipsis;
+      }
+    }
+
+    .prd-price-area {
+      margin-bottom: 3px;
+    }
+
+    .prd-grade-area {
+      margin-bottom: 5px;
+      span {
+        font-size: 12px;
+      }
+    }
+
+    .prd-badge-area {
+      .prd-badge {
+        width: 35px;
+        font-size: 5px;
+        height: 20px;
+        line-height: 20px;
+        font-weight: 500;
+      }
+    }
+
+
+  }
 }
