--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -250,7 +250,6 @@
     display: flex;
     justify-content: center;
 
-
     .tab-item {
       &.is-active {
         &::before {
@@ -427,12 +426,12 @@
           &:hover {
             color: $white;
           }
-        }
-        .bi{
-          &::before {
+
+          .sns-item {
+            color: #999;
             font-size: 45px;
           }
-      }
+        }
       
     }
   }
