--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -45,7 +45,9 @@
       flex-direction: column;
     }
   
-    .title-group {}
+    @at-root .title-group {
+      padding: 0 15px;
+    }
     .best-group {
       .prd-list {
         width: 100%;
@@ -475,10 +477,12 @@
         object-fit: cover;
       }
       .book-info-area {
-        padding-top: 45px;
         visibility: visible;
         opacity: 1;
         background-color: rgba(255,255,255,.7);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
       }
     }
   
